# b2cagent-api

./: .env.example  .gitignore  .htaccess  Dockerfile  README.md  passenger_wsgi.py  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_property_types_and_field_config.py  0003_nullable_google_sub.py  0004_email_verified_unique_phone.py  0005_user_default_location.py  0006_dual_role.py  0007_leads_and_bid_changes.py  0008_bookings_and_blocks.py  0009_property_draft_status.py  0010_property_inactive_status.py  0011_property_address_fields.py  0012_property_day_prices.py  0013_lead_customer_location.py  0014_bid_payments.py  0015_bid_on_hold.py  0016_cleanup_orphan_bookings.py  0017_subscriptions_admin.py  0018_promote_rahul_admin.py  0019_plan_limits_repricing.py  0020_messages_notifications.py  0021_notification_audience.py  0022_user_avatar.py  0023_email_templates.py  0024_email_templates_html.py  0025_email_brand_rename.py  0026_email_button_links.py
app/: main.py
app/core/: config.py  database.py  redis.py  security.py
app/models/: __init__.py  bid.py  bid_payment.py  booking.py  email_template.py  enums.py  field_config.py  inbox.py  lead.py  mixins.py  property.py  property_amenity.py  property_day_price.py  property_photo.py  property_room.py  subscription.py  user.py
app/schemas/: auth.py  bid.py  bid_payment.py  booking.py  catalog.py  email_template.py  inbox.py  lead.py  property.py  subscription.py  user.py
scripts/: _bootstrap_db.py
tests/: conftest.py  test_auth.py  test_bids.py  test_catalog_and_admin.py  test_properties.py
(+27 files in other folders)
